--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </script>
   </head>
   <body>
-    <h1>Warung Sembako</h1>
+    <h1><center>Warung Sembako</center></h1>
     <noscript>
       <strong>We're sorry but this app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
