--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
         gtag('js', new Date());
         gtag('config', 'UA-130795909-1');
     </script>
+    <script type="module" crossorigin src="dist/assets/index.98607a94.js"></script>
+    <link rel="stylesheet" href="dist/assets/index.3a91d41e.css">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but this app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
