--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         gtag('js', new Date());
         gtag('config', 'UA-130795909-1');
     </script>
-    <script type="module" crossorigin src="/assets/index.9dfdff68.js"></script>
-    <link rel="stylesheet" href="/assets/index.3a91d41e.css">
+    <script type="module" crossorigin src="dist/assets/index.9dfdff68.js"></script>
+    <link rel="stylesheet" href="dist/assets/index.3a91d41e.css">
   </head>
   <body>
     <noscript>
